[tool.poetry]
name = "twitter-bot"
version = "0.1.0"
description = "A bot that monitors datasources for COVID-19 and posts on Twitter"
authors = ["Sergio Kef <sergiokef@gmail.com>"]
license = "Apache-2.0"
packages = [{include = "bot"}]
repository = "https://github.com/COVID2019-app/twitter-bot"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.12.0"
sqlalchemy = "^1.3.15"
pandas = "^1.0.2"
psycopg2-binary = "^2.8.4"
tweepy = "^3.8.0"
country_converter = "^0.6.7"
emoji-country-flag = "^1.2.1"

[tool.poetry.scripts]
breaking-bot = "bot:main"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
isort = "^4.3.21"
flake8 = "^3.7.9"
seed-isort-config = "^2.1.0"
black = "^19.10b0"
pylint = "^2.4.4"
pre-commit = "^2.2.0"

[build-system]
requires = ["poetry>=1.0.5"]
build-backend = "poetry.masonry.api"
